--- a/style.css
+++ b/style.css
@@ -30,3 +30,8 @@ section {
     padding: 10px 20px;
     border-radius: 10px;
 }
+
+.section_1 {
+    background-image: linear-gradient();
+    margin: 0;
+}
